--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -26,7 +26,7 @@
 					</div>
 					<div class="menu">
 						<ul>
-							<li class="active" data-id="mainbanner"><a href="">Home</a></li>
+							<!-- <li class="active" data-id="mainbanner"><a href="">Home</a></li> -->
 							<li data-id="productsection"><a href="javascript:;">Product</a></li>
 							<li data-id="curiouslearnsec"><a href="javascript:;">Pre-book</a></li>
 							<li data-id="demorequestsec"><a href="javascript:;">Demo Request</a></li>
@@ -185,7 +185,9 @@
 								<div class="bookFeature">
 									<ul>
 										<li>- Concepts come alive with ARI</li>
+										<li>- Personalised practice beyond the book with PIE</li>
 										<li>- Learn Science by doing</li>
+										<li>- Build essential skills</li>
 									</ul>					
 									<div class="buttonBox">
 										<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a Demo</a>
@@ -208,6 +210,7 @@
 										<li>- Concepts come alive with ARI</li>
 										<li>- Personalised practice beyond the book with PIE</li>
 										<li>- Learn MATH via concrete pictorial abstract methods</li>
+										<li>- Build essential skills</li>
 									</ul>				
 									<div class="buttonBox">
 										<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a Demo</a>
@@ -241,45 +244,76 @@
 	 <section class="demorequestsec bgstyle" id="demorequestsec" style="background-image: url(images/background.png);">
 		<div class="container">
 			<div class="row">
-				<div class="formdata">					
-					<form action="" name="contact-form" method="post" class="contact__form">
-						<div class="input">
-							<input type="text" placeholder="Name" name="name" required>
+				<div class="col-5">					
+					<div class="formdata">	
+						<h2>Give Your School The Lead Advantage</h2>				
+						<script charset="utf-8" type="text/javascript" src="https://js.hsforms.net/forms/embed/v2.js"></script>
+<script>
+  hbspt.forms.create({
+    region: "na1",
+    portalId: "8143162",
+    formId: "34584e0f-beb2-41e5-8f2a-33c0f93ca1e2"
+  });
+</script>
+
+						<div class="sucessmsg" style="display: none;">
+							<p style="text-align: center;color: green;font-weight: 500;font-size: 1.9rem;">Thanks for your Techbook demo request! We'll contact you soon to schedule.</p>
 						</div>
-						<div class="input">
-							<input type="tel" placeholder="Phone Number" name="phone" required maxlength="10" minlength="10" pattern="\d{10,15}">
+					</div>
+				</div>
+				<div class="col-5"></div>
+			</div>
+		</div>
+	 </section>
+	<!-- Demo Request Form End -->
+	 
+	<!-- Faq Section Start -->
+	<section class="faqsection bgstyle" id="faqsection" style="background-image: url(images/background.png);">
+		<div class="container">
+			<div class="row">
+				<div class="col-6">	
+					<h2>FAQs </h2>	
+					<div class="accordion">
+						<h4>What is a Techbook?<span class="icon">+</span></h4>
+						<div class="details">
+							Techbook is an intelligent book designed to transform traditional textbook-driven learning.  The TECHBOOK brings three cutting-edge technologies and NCF aligned curriculum to address key learning challenges among school students today.
 						</div>
-						<div class="input">
-							<input type="text" placeholder="School Name" name="schoolname" required>
+						<h4>For which grades is The Techbook available?<span class="icon">+</span></h4>
+						<div class="details">The Techbook is currently available for Grades 1 -8.</div>
+						<h4>For which subjects is The Techbook available?<span class="icon">+</span></h4>
+						<div class="details">The Techbook is currently available for Math, Science & English.</div>
+						<h4>How can I get TECHBOOK for my school?<span class="icon">+</span></h4>
+						<div class="details">Techbook is currently available by Invitation Only. To get your exclusive invite code, either get in touch with your Pinnacle Representative OR fill out your details here -<4AM to put><></div>
+						<h4>Can parents purchase a Techbook directly for their child?<span class="icon">+</span></h4>
+						<div class="details">
+							No. Techbook is available only for students in select new-age schools that pre-book. Check with your school to apply for Techbook.
 						</div>
-						<div class="input">
-							<input type="text" placeholder="School Pincode" name="schoolpincode" required>
+						<h4>How is TECHBOOK different from traditional textbooks?<span class="icon">+</span></h4>
+						<div class="details">
+							The TECHBOOK addresses the limitations of traditional textbooks by introducing a personalized and interactive learning experience. In classrooms with varying learning levels, the TECHBOOK enables personalised instruction for each student.
 						</div>
-						<div class="input">
-							<!-- <input type="text" placeholder="Role" name="role" required> -->
-								<Select name="role">
-								<option>-Select Role-</option>
-								<option value="School Owner/Management">School Owner/Management</option>
-								<option value="Principal">Principal</option>
-								<option value="Teacher">Teacher</option>
-								<option value="Other">Other</option>
-								</Select>
+						<h4>What is ARI? How does it improve the learning of students?<span class="icon">+</span></h4>
+						<div class="details">
+							Traditional 2D textbooks limit students' ability to grasp complex concepts that are inherently 3D in nature. The TECHBOOK brings subjects such as Science and Mathematics to life with ARI enabling students to interact with topics in 3D using any device like mobile phone/tablet. The teachers can also use this augmented reality technology in their classrooms by casting on their existing hardware.
 						</div>
-						<div class="input">
-							<input type="email" placeholder="Email ID" name="emailid" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
+						<h4>What is IRA? How does it improve reading fluency of students?<span class="icon">+</span></h4>
+						<div class="details">
+							For language learning, TECHBOOK’s IRA acts as a personal tutor, reading books aloud to students, while also listening to a student’s reading and providing real-time feedback on their reading fluency and pronunciation. 
 						</div>
-						<div class="formbutton">
-							<input type="submit" value="Send" id="submit">
+						<h4>What is PIE? How does it help in improving subject mastery?<span class="icon">+</span></h4>
+						<div class="details">
+							With PIE (Personalized Interactive Exercises), students get limitless exercises that are adaptive in nature. So students can master subjects at their own pace using any device like a mobile phone/tablet, making learning fun and continuous.
 						</div>
-					</form>
-					<div class="sucessmsg" style="display: none;">
-						<p style="text-align: center;color: green;font-weight: 500;font-size: 1.9rem;">Thanks for your Techbook demo request! We'll contact you soon to schedule.</p>
+						<h4>Which technologies are available in which subjects? <span class="icon">+</span></h4>
+						<div class="details">
+							TECHBOOK English is powered by IRA & PIE. TECHBOOK Science has ARI & PIE. TECHBOOK Math has ARI & PIE. 
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	 </section>
-	<!-- Demo Request Form End -->
+	<!-- Faq Section End -->
 
 	
 
@@ -327,15 +361,15 @@
 	});
 
 		$(document).ready(function () {
-			$(".productslider").slick({
-				slidesToShow: 1,
-				slidesToScroll: 1,
-				autoplay: true,
-				autoplaySpeed: 5000,
-				arrows: false,
-				dots: false,
-				pauseOnHover: false,
-			});
+			// $(".productslider").slick({
+			// 	slidesToShow: 1,
+			// 	slidesToScroll: 1,
+			// 	autoplay: true,
+			// 	autoplaySpeed: 5000,
+			// 	arrows: false,
+			// 	dots: false,
+			// 	pauseOnHover: false,
+			// });
 			$(".bookslider").slick({
 				slidesToShow: 1,
 				slidesToScroll: 1,
@@ -373,33 +407,35 @@
 			
 
 		});
-		
-	</script>
-	<script type="text/javascript">
-		// https://docs.google.com/spreadsheets/d/1OJVndfUrJVpI95-rqVT6n8KRkSQUhTtSfSRZF-Rz3Vk/edit?gid=0#gid=0 sheet
-		const scriptURL = 'https://script.google.com/macros/s/AKfycbzfSZLmYbRTYmsVetnyKduhlcTav2n7orc5Bl8kpdlXs8ZLp3-NEtdnmNSKblG2WSvA/exec';
-		const form = document.forms['contact-form'];
-		form.addEventListener('submit', e => {
-		e.preventDefault();
-		fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-		.then(response => {
-			// Check if the response is successful
-			if (response.ok) {
-			// Show the .smgmsg div if the response is OK
-			document.querySelector('.sucessmsg').style.display = 'block';
-			document.querySelector('.contact__form').style.display = 'none';
-			
-			// Optionally, clear the form after submission
-			form.reset();
+		$(document).ready(function(){
+	    $('.accordion h4').click(function(){
+	        // Close other open panels
+	        $('.details').slideUp();
+	        $('.accordion h4 .icon').text('+');
+	        
+	        // Toggle the clicked panel
+	        if($(this).next('.details').is(':visible')) {
+	            $(this).next('.details').slideUp();
+	            $(this).find('.icon').text('+');
+	        } else {
+	            $(this).next('.details').slideDown();
+	            $(this).find('.icon').text('-');
+	        }
+	    });
+	});
+	// jQuery for sticky header on scroll
+	jQuery(document).ready(function($) {
+		$(window).on('scroll', function() {
+			var scroll = $(window).scrollTop();
+			if (scroll > 100) { // Adjust the value as needed
+				$('.siteheader').addClass('sticky');
 			} else {
-			// Handle other response scenarios if needed
-			console.error('Error:', response.statusText);
+				$('.siteheader').removeClass('sticky');
 			}
-		})
-		.catch(error => console.error('Error!', error.message));
 		});
+	});
 
-</script>
+	</script>
 	
 </body>
 </html>
