--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -27,7 +27,14 @@
 					<div class="menu">
 						<ul>
 							<!-- <li class="active" data-id="mainbanner"><a href="">Home</a></li> -->
-							<li data-id="productsection"><a href="javascript:;">Product</a></li>
+							<li data-id="productsection" class="dropdown">
+								<a href="javascript:;">Product</a>
+								<ul class="submenu">
+									<li><a href="javascript:;"><img src="images/logo.png" alt="logo"> Science</a></li>
+									<li><a href="javascript:;"><img src="images/logo.png" alt="logo"> English</a></li>
+									<li><a href="javascript:;"><img src="images/logo.png" alt="logo"> Math</a></li>
+								</ul>
+							</li>
 							<li data-id="curiouslearnsec"><a href="javascript:;">Pre-book</a></li>
 							<li data-id="demorequestsec"><a href="javascript:;">Demo Request</a></li>
 							<li data-id=""><a href="javascript:;">Contact Us</a></li>
