--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -162,65 +162,70 @@
 	 
 	<!-- Product Section Start -->
 	 <section class="productsection bgstyle" id="productsection" style="background-image: url(images/background.png);">
-		<div class="container">
+		<div class="containBox">
 			<div class="productblock">
 				<div class="productslider">
 					<div id="englishbook" class="productslide">
 						<div class="row">
-							<div class="col-5">
-								<div class="image"><img src="images/Red-Book-3.png" alt="Red book"></div>
+							<div class="col-35">
+								<div class="image"><img src="images/middle-active-Book.png" alt="Red book"><a href="">CLICK TO EXPLORE</a></div>
 							</div>
-							<div class="col-5">
+							<div class="col-6">
 								<div class="bookFeature">
+									<h6>THE INTELLIGENT ENGLISH BOOK</h6>
 									<ul>
-										<li>- Build reading fluency for every child with IRA</li>
-										<li>- Personalised practice beyond the book with PIE</li>
-										<li>- ⁠Lexile-based reading levels</li>
-										<li>- ⁠An Eclectic mix of authors</li>
-										<li>- ⁠Theme-based, from self to world</li>
+										<li><img src="images/pie.png" alt="Pie">Build reading fluency for every child with IRA</li>
+										<li><img src="images/ari.png" alt="ari">Personalised practice beyond the book with PIE</li>
+										<li><img src="images/cpa.png" alt="cpa">Advance Language Skills in your students</li>
+										<li><img src="images/skill.png" alt="skill">⁠Lexile-based reading levels</li>
 									</ul>					
+									<p><span>NCF-aligned features</span> | <span>Comprehensive teacher resources on the Active Teach App</span> | <span>Rich student resources on the Pinnacle Student App</span></p>
 									<div class="buttonBox">
-										<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a Demo</a>
+										<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">PRE-BOOK NOW</a>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div id="sciencebook" class="productslide columnreverse">
+					<div id="sciencebook" class="productslide">
 						<div class="row">
-							<div class="col-5">
+							<div class="col-35">
+								<div class="image"><img src="images/sciencemiddle-active-Book.png" alt="Red book"><a href="">CLICK TO EXPLORE</a></div>
+							</div>
+							<div class="col-6">
 								<div class="bookFeature">
+									<h6>THE INTELLIGENT SCIENCE BOOK</h6>
 									<ul>
-										<li>- Concepts come alive with ARI</li>
-										<li>- Personalised practice beyond the book with PIE</li>
-										<li>- Learn Science by doing</li>
-										<li>- Build essential skills</li>
+										<li><img src="images/pie.png" alt="Pie">Concepts come alive with ARI</li>
+										<li><img src="images/ari.png" alt="ari">Personalised practice beyond the book with PIE</li>
+										<li><img src="images/cpa.png" alt="cpa">Learn Science by Doing</li>
+										<li><img src="images/skill.png" alt="skill">Build essential skills</li>
 									</ul>					
+									<p><span>NCF-aligned features</span> | <span>Comprehensive teacher resources on the Active Teach App</span> | <span>Rich student resources on the Pinnacle Student App</span></p>
 									<div class="buttonBox">
-										<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a Demo</a>
+										<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">PRE-BOOK NOW</a>
 									</div>
 								</div>
-							</div>
-							<div class="col-5">
-								<div class="image"><img src="images/Green-Book-2.png" alt="Green book"></div>
 							</div>
 						</div>
 					</div>
 					<div id="mathbook" class="productslide">
 						<div class="row">
-							<div class="col-5">
-								<div class="image"><img src="images/Blue-Book-3.png" alt="Blue book"></div>
+							<div class="col-35">
+								<div class="image"><img src="images/mathmiddle-active-Book.png" alt="Red book"><a href="">CLICK TO EXPLORE</a></div>
 							</div>
-							<div class="col-5">
+							<div class="col-6">
 								<div class="bookFeature">
+									<h6>THE INTELLIGENT MATH BOOK</h6>
 									<ul>
-										<li>- Concepts come alive with ARI</li>
-										<li>- Personalised practice beyond the book with PIE</li>
-										<li>- Learn MATH via concrete pictorial abstract methods</li>
-										<li>- Build essential skills</li>
-									</ul>				
+										<li><img src="images/pie.png" alt="Pie">Personalised practice beyond the book with PIE</li>
+										<li><img src="images/ari.png" alt="ari">Concepts come alive with ARI</li>
+										<li><img src="images/cpa.png" alt="cpa">Learn Math via Concrete Pictorial Abstract Method</li>
+										<li><img src="images/skill.png" alt="skill">Build essential skills</li>
+									</ul>					
+									<p><span>NCF-aligned features</span> | <span>Comprehensive teacher resources on the Active Teach App</span> | <span>Rich student resources on the Pinnacle Student App</span></p>
 									<div class="buttonBox">
-										<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a Demo</a>
+										<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">PRE-BOOK NOW</a>
 									</div>
 								</div>
 							</div>
@@ -322,7 +327,58 @@
 	 </section>
 	<!-- Faq Section End -->
 
-	
+	<!-- Footer Start -->
+	 <footer class="sitefooter">
+		<div class="container">
+			<div class="row">
+				<div class="col-3">
+					<div class="footerlogo">
+						<img src="images/footer-logo-pinnacle.png" alt="logo">
+					</div>
+				</div>
+				<div class="col-3">
+					<h6>Quick Links</h6>
+					<ul>
+						<li><a href="">LEAD Group</a></li>
+					</ul>
+				</div>
+				<div class="col-3">
+					<h6>Contact</h6>
+					<ul>
+						<li>
+							<div class="linnr">
+								<p><span>Email:</span>help@leadgroup.co.in</p>
+							</div>
+						</li>
+						<li>
+							<div class="linnr">
+								<p><span>Call/Whatsapp:</span>+9186828 33333</p>
+							</div>
+						</li>
+						<li>
+							<div class="linnr">
+								<p><span>Timings:</span>8:00 AM to 6:00 PM</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+				<div class="col-3">
+					<h6>Follow us</h6>
+					<ul>
+						<li><a href="">Facebook</a></li>
+						<li><a href="">Instagram</a></li>
+						<li><a href="">Linkedin</a></li>
+						<li><a href="">Twitter</a></li>
+						<li><a href="">Youtube</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="copyright">
+			<p>© Copyright Leadership Boulevard Private Limited 2023. All rights reserved.</p>
+		</div>
+	 </footer>
+	<!-- Footer End -->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
