--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -37,7 +37,7 @@
 							</li>
 							<li class="curiouslearn"><a href="javascript:;">Pre-book</a></li>
 							<li class="demorequest"><a href="javascript:;">Demo Request</a></li>
-							<li><a href="javascript:;">Contact Us</a></li>
+							<!-- <li><a href="javascript:;">Contact Us</a></li> -->
 							<li class="faq"><a href="javascript:;">FAQ's</a></li>
 						</ul>
 					</div>
