--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -333,7 +333,7 @@
 			<div class="row">
 				<div class="col-3">
 					<div class="footerlogo">
-						<img src="images/footer-logo-pinnacle.png" alt="logo">
+						<img src="images/pinnacle.png" alt="logo">
 					</div>
 				</div>
 				<div class="col-3">
@@ -379,6 +379,14 @@
 		</div>
 	 </footer>
 	<!-- Footer End -->
+
+	<div class="popupsec" id="" style="display: none;">
+			<div class="popupinnr">
+				<div class="close"><img src="images/cross.png" alt="cross"></div>
+				<div style="position:relative;padding-top:max(60%,324px);width:100%;height:0;"><iframe style="position:absolute;border:none;width:100%;height:100%;left:0;top:0;" src="https://online.fliphtml5.com/mnvuh/hjud/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe></div>
+			</div>
+		</div>
+	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
