--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -7,9 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css">
+	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header class="siteheader">
@@ -52,26 +53,32 @@
 				<div class="bookthreeblock">
 					<div class="bookthreeblockinnr">
 						<div class="headingBox">
-							<h1>The INTELLIGENT BOOK FOR NEW-AGE SCHOOL</h1>
-						</div>				
-						<div class="threetechbook">
-							<ul>
-								<li>
-									<div class="techbook" data-book="bluebook"><img src="images/Blue-Book-1.png" alt="Blue-Book-1"></div>
-								</li>
-								<li>
-									<div class="techbook" data-book="redbook"><img src="images/Red-Book-1.png" alt="Red-Book-1"></div>
-								</li>
-								<li>
-									<div class="techbooks"><img src="images/Green-Book-1.png" alt="Green-Book-1"></div>
-								</li>
-							</ul>
-						</div>								
-						<div class="buttonBox">
-							<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a 
-								Demo
-							</a>
-						</div>
+							<h1>The INTELLIGENT BOOK FOR <br>NEW-AGE SCHOOLS</h1>
+						</div>	
+						<div class="row">
+							<div class="col-3">																
+								<div class="buttonBox">
+									<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a 
+										Demo
+									</a>
+								</div>
+							</div>
+							<div class="col-7">	
+								<div class="threetechbook">
+									<ul>
+										<li>
+											<div class="techbook" data-book="bluebook"><img src="images/Blue-Book-1.png" alt="Blue-Book-1"></div>
+										</li>
+										<li>
+											<div class="techbook" data-book="redbook"><img src="images/Red-Book-1.png" alt="Red-Book-1"></div>
+										</li>
+										<li>
+											<div class="techbooks"><img src="images/Green-Book-1.png" alt="Green-Book-1"></div>
+										</li>
+									</ul>
+								</div>	
+							</div>
+						</div>	
 					</div>
 				</div>
 				<div id="bluebook" class="middlebook bluebookactive" style="display: none;">
@@ -109,7 +116,7 @@
 									<div class="slideinnr">
 										<img src="images/Open-Red-Book.png" alt="">
 										<div class="btnbox">
-											<a href="" class="posurl">												
+											<a href="javascript:;" class="posurl irabookvideo">												
 											</a>
 										</div>
 									</div>
@@ -159,38 +166,48 @@
 		</div>
 	 </section>
 	<!-- Main Banner End -->
-	 
+	
+	<!-- Powered by Start -->
+	 	<div class="poweredsec">
+			<div class="container">
+				<div class="row">
+					<div class="poweredtt">Powered By</div>
+					<div class="poweredbyitems">
+						<ul>
+							<li>
+								<div class="linnr">
+									<div class="icon"><img src="images/iraicon.png" alt="IRA"></div>
+									<p>Personalised Reading Fluency</p>
+								</div>
+							</li>
+							<li>
+								<div class="linnr">
+									<div class="icon"><img src="images/pie.png" alt="PIE"></div>
+									<p>Personalised Practice</p>
+								</div>
+							</li>
+							<li>
+								<div class="linnr">
+									<div class="icon"><img src="images/ari.png" alt="ARI"></div>
+									<p>Augmented Reality</p>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	<!-- Powered by End -->
+
 	<!-- Product Section Start -->
 	 <section class="productsection bgstyle" id="productsection" style="background-image: url(images/background.png);">
 		<div class="containBox">
 			<div class="productblock">
 				<div class="productslider">
-					<div id="englishbook" class="productslide">
-						<div class="row">
-							<div class="col-35">
-								<div class="image"><img src="images/middle-active-Book.png" alt="Red book"><a href="">CLICK TO EXPLORE</a></div>
-							</div>
-							<div class="col-6">
-								<div class="bookFeature">
-									<h6>THE INTELLIGENT ENGLISH BOOK</h6>
-									<ul>
-										<li><img src="images/pie.png" alt="Pie">Build reading fluency for every child with IRA</li>
-										<li><img src="images/ari.png" alt="ari">Personalised practice beyond the book with PIE</li>
-										<li><img src="images/cpa.png" alt="cpa">Advance Language Skills in your students</li>
-										<li><img src="images/skill.png" alt="skill">⁠Lexile-based reading levels</li>
-									</ul>					
-									<p><span>NCF-aligned features</span> | <span>Comprehensive teacher resources on the Active Teach App</span> | <span>Rich student resources on the Pinnacle Student App</span></p>
-									<div class="buttonBox">
-										<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">PRE-BOOK NOW</a>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
 					<div id="sciencebook" class="productslide">
 						<div class="row">
 							<div class="col-35">
-								<div class="image"><img src="images/sciencemiddle-active-Book.png" alt="Red book"><a href="">CLICK TO EXPLORE</a></div>
+								<div class="image"><img src="images/sciencemiddle-active-Book.png" alt="Red book"><a href="javascript:;" class="scienceclickexplore">CLICK TO EXPLORE</a></div>
 							</div>
 							<div class="col-6">
 								<div class="bookFeature">
@@ -209,10 +226,32 @@
 							</div>
 						</div>
 					</div>
+					<div id="englishbook" class="productslide">
+						<div class="row">
+							<div class="col-35">
+								<div class="image"><img src="images/middle-active-Book.png" alt="Red book"><a href="javascript:;" class="englishclickexplore">CLICK TO EXPLORE</a></div>
+							</div>
+							<div class="col-6">
+								<div class="bookFeature">
+									<h6>THE INTELLIGENT ENGLISH BOOK</h6>
+									<ul>
+										<li><img src="images/pie.png" alt="Pie">Build reading fluency for every child with IRA</li>
+										<li><img src="images/ari.png" alt="ari">Personalised practice beyond the book with PIE</li>
+										<li><img src="images/cpa.png" alt="cpa">Advance Language Skills in your students</li>
+										<li><img src="images/skill.png" alt="skill">⁠Lexile-based reading levels</li>
+									</ul>					
+									<p><span>NCF-aligned features</span> | <span>Comprehensive teacher resources on the Active Teach App</span> | <span>Rich student resources on the Pinnacle Student App</span></p>
+									<div class="buttonBox">
+										<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">PRE-BOOK NOW</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 					<div id="mathbook" class="productslide">
 						<div class="row">
 							<div class="col-35">
-								<div class="image"><img src="images/mathmiddle-active-Book.png" alt="Red book"><a href="">CLICK TO EXPLORE</a></div>
+								<div class="image"><img src="images/mathmiddle-active-Book.png" alt="Red book"><a href="javascript:;" class="mathclickexplore">CLICK TO EXPLORE</a></div>
 							</div>
 							<div class="col-6">
 								<div class="bookFeature">
@@ -241,10 +280,18 @@
 	 <section class="curiouslearnsec bgstyle" id="curiouslearnsec" style="background-image: url(images/background.png);">
 		<div class="container">
 			<div class="row">
-				<div class="content">
-					<h2>Interested in bringing this to your schools?</h2>				
-					<div class="buttonBox">
-						<a href="javascript:;" class="btn" style="background-image: url(images/buttonbg.png);">Join the Waitlist</a>
+				<div class="col-5">
+					<div class="image">
+						<img src="images/techBooksgoup.png" alt="Books">
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="content">
+						<!-- <h2>Interested in bringing this to your schools?</h2>				 -->
+						 <h2>Curious to learn more?</h2>
+						<div class="buttonBox">
+							<a href="javascript:;" class="btn" style="background-image: url(images/buttonbg.png);">Join the Waitlist</a>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -253,7 +300,7 @@
 	<!-- Curious to learn more? End -->
 
 	<!-- Demo Request Form Start -->
-	 <section class="demorequestsec bgstyle" id="demorequestsec" style="background-image: url(images/background.png);">
+	 <section class="demorequestsec bgstyle" id="demorequestsec" style="background-image: url(images/demorequestbg.jpg);">
 		<div class="container">
 			<div class="row">
 				<div class="col-5"></div>
@@ -333,7 +380,7 @@
 			<div class="row">
 				<div class="col-3">
 					<div class="footerlogo">
-						<img src="images/pinnacle.png" alt="logo">
+						<img src="images/pinnacle.png" alt="logo" width="150px">
 					</div>
 				</div>
 				<div class="col-3">
@@ -379,14 +426,34 @@
 		</div>
 	 </footer>
 	<!-- Footer End -->
-
-	<div class="popupsec" id="" style="display: none;">
-			<div class="popupinnr">
-				<div class="close"><img src="images/cross.png" alt="cross"></div>
-				<div style="position:relative;padding-top:max(60%,324px);width:100%;height:0;"><iframe style="position:absolute;border:none;width:100%;height:100%;left:0;top:0;" src="https://online.fliphtml5.com/mnvuh/hjud/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe></div>
-			</div>
+	<div class="popupsec iraredbook" style="display: none;">
+		<div class="popupinnr">
+			<div class="close"><img src="images/cross.png" alt="cross"></div>
+			<video id="video" width="100%" height="100%" controls="" preload="auto">
+				<source src="images/iravideo.mp4" />
+			</video>
 		</div>
 	</div>
+
+	<div class="popupsec" id="sciencebookpdf" style="display: none;">
+		<div class="popupinnr">
+			<div class="close"><img src="images/cross.png" alt="cross"></div>
+			<div style="position:relative;padding-top:max(46%,324px);width:100%;height:0;"><iframe style="position:absolute;border:none;width:100%;height:100%;left:0;top:0;" src="https://online.fliphtml5.com/mnvuh/hjud/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe></div>
+		</div>
+	</div>
+	<div class="popupsec" id="englishbookpdf" style="display: none;">
+		<div class="popupinnr">
+			<div class="close"><img src="images/cross.png" alt="cross"></div>
+			<div style="position:relative;padding-top:max(46%,324px);width:100%;height:0;"><iframe style="position:absolute;border:none;width:100%;height:100%;left:0;top:0;" src="https://online.fliphtml5.com/mnvuh/lqkl/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe></div>
+		</div>
+	</div>
+	<div class="popupsec" id="mathbookpdf" style="display: none;">
+		<div class="popupinnr">
+			<div class="close"><img src="images/cross.png" alt="cross"></div>
+			<div style="position:relative;padding-top:max(46%,324px);width:100%;height:0;"><iframe style="position:absolute;border:none;width:100%;height:100%;left:0;top:0;" src="https://online.fliphtml5.com/mnvuh/ptwh/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe></div>
+		</div>
+	</div>
+
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
@@ -475,6 +542,30 @@
 				$(".redbookactive").hide();
 				$('.bookslider').slick('refresh');
 
+			});
+			$('.scienceclickexplore').click(function() {
+				$('#sciencebookpdf').show();
+			});
+			$('#sciencebookpdf .close').click(function() {
+				$('#sciencebookpdf').hide();
+			});
+			$('.englishclickexplore').click(function() {
+				$('#englishbookpdf').show();
+			});
+			$('#englishbookpdf .close').click(function() {
+				$('#englishbookpdf').hide();
+			});
+			$('.mathclickexplore').click(function() {
+				$('#mathbookpdf').show();
+			});
+			$('#mathbookpdf .close').click(function() {
+				$('#mathbookpdf').hide();
+			});
+			$('.irabookvideo').click(function() {
+				$('.iraredbook').show();
+			});
+			$('#irabookvideo .close').click(function() {
+				$('#irabookvideo').hide();
 			});
 			$('.humburgur').click(function() {
 				$('.menu').slideToggle();
